--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,9 @@
-<router-outlet></router-outlet>
+<header>
+  <h1>Here will be header</h1>
+</header>
+<div class="container">
+  <router-outlet></router-outlet>
+</div>
+<footer>
+  <h1>Here will be footer</h1>
+</footer>
