--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,7 +1,7 @@
-
+@import "~bootstrap-4-grid";
 // Custom Theming for Angular Material
 // For more information: https://material.angular.io/guide/theming
-@import '~@angular/material/theming';
+@import "~@angular/material/theming";
 // Plus imports for other components in your app.
 
 // Include the common styles for Angular Material. We include this here so that you only
@@ -19,7 +19,11 @@ $fii-practic-accent: mat-palette($mat-pink, A200, A100, A400);
 $fii-practic-warn: mat-palette($mat-red);
 
 // Create the theme object (a Sass map containing all of the palettes).
-$fii-practic-theme: mat-light-theme($fii-practic-primary, $fii-practic-accent, $fii-practic-warn);
+$fii-practic-theme: mat-light-theme(
+  $fii-practic-primary,
+  $fii-practic-accent,
+  $fii-practic-warn
+);
 
 // Include theme styles for core and each component used in your app.
 // Alternatively, you can import and @include the theme mixins for each component
@@ -28,7 +32,13 @@ $fii-practic-theme: mat-light-theme($fii-practic-primary, $fii-practic-accent, $
 
 /* You can add global styles to this file, and also import other style files */
 
-@import 'styles/normalize';
+@import "styles/normalize";
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+html,
+body {
+  height: 100%;
+}
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
