--- a/src/app/session/pages/register/register.component.html
+++ b/src/app/session/pages/register/register.component.html
@@ -1,7 +1,11 @@
 <div class="row justify-content-center">
   <div class="col-md-6">
     <app-auth-card title="Înregistrare">
-      <form (ngSubmit)="onSubmit()" [formGroup]="registerForm" class="form">
+      <form
+        (ngSubmit)="onSubmit()"
+        [formGroup]="registerForm"
+        class="form"
+      >
         <mat-form-field>
           <input
             matInput
@@ -29,14 +33,13 @@
         <mat-form-field>
           <input
             matInput
-            ty
-            pe="text"
+            type="text"
             placeholder="Email"
             formControlName="email"
             required
           />
-          <mat-error *ngIf="registerForm.hasError('email', 'required')"
-            >Email-ul este obligatoriu
+          <mat-error *ngIf="registerForm.hasError('email', 'required')">
+            Email-ul este obligatoriu
           </mat-error>
         </mat-form-field>
         <mat-form-field>
@@ -45,32 +48,45 @@
             type="password"
             placeholder="Parola"
             formControlName="password"
-            required
           />
-          <mat-error *ngIf="registerForm.hasError('password', 'required')">
-            Parola este obligatorie
+          <mat-error *ngIf="registerForm.get('password').getError('required')">
+            Parola este obligatorie!
+          </mat-error>
+          <mat-error *ngIf="registerForm.get('password').getError('minlength')">
+            Parola trebuie sa contina minim {{ registerForm.get('password').getError('minlength').requiredLength }}
+            caractere!
           </mat-error>
         </mat-form-field>
         <p>
           Înregistrarea presupune că ești de acord cu
-          <a href="#" rel="noopener">termenii și condițiile</a>.
+          <a
+            href="#"
+            rel="noopener"
+          >termenii și condițiile</a>.
         </p>
         <mat-checkbox formControlName="gdprAsii">
           <span class="color-warn">*</span> Ești de acord ca datele tale să fie
           colectate și procesate de către ASII conform
-          <a href="#" target="_blank" rel="noopener"
-            >Notei de informare conform GDPR</a
-          >?
+          <a
+            href="#"
+            target="_blank"
+            rel="noopener"
+          >Notei de informare conform GDPR</a>?
         </mat-checkbox>
         <mat-checkbox formControlName="gdprCompany">
           Ești de acord ca datele tale să fie colectate și procesate de
           companiile partenere conform
-          <a href="#" target="_blank" rel="noopener"
-            >Notei de informare conform GDPR</a
-          >?
+          <a
+            href="#"
+            target="_blank"
+            rel="noopener"
+          >Notei de informare conform GDPR</a>?
         </mat-checkbox>
         <div class="captcha-container">
-          <re-captcha [siteKey]="captchaKey" [formControlName]="'captcha'">
+          <re-captcha
+            [siteKey]="captchaKey"
+            [formControlName]="'captcha'"
+          >
           </re-captcha>
         </div>
         <button
