--- a/src/app/session/pages/register/register.component.html
+++ b/src/app/session/pages/register/register.component.html
@@ -33,7 +33,7 @@
         <mat-form-field>
           <input
             matInput
-            type="text"
+            type="email"
             placeholder="Email"
             formControlName="email"
             required
