--- a/src/app/session/components/auth-card/auth-card.component.scss
+++ b/src/app/session/components/auth-card/auth-card.component.scss
@@ -7,7 +7,13 @@
     user-select: none;
   }
 
+  &__subtitle {
+    font-size: 1.6rem;
+    margin-bottom: 0;
+  }
+
   &__content {
-    margin: 4rem 0;
+    margin: 3rem 0;
   }
 }
+
