Code style fixes

--- a/src/app/session/pages/reset-password/reset-password.component.html
+++ b/src/app/session/pages/reset-password/reset-password.component.html
@@ -2,8 +2,8 @@
   <div class="col-md-6">
     <app-auth-card subTitle="Introdu emailul contului:">
       <form
-        (ngSubmit)="onSubmit()"
         [formGroup]="resetPasswordForm"
+        (ngSubmit)="onSubmit()"
         class="form"
       >
         <mat-form-field>
@@ -23,7 +23,7 @@
           color="accent"
           [disabled]="resetPasswordForm.invalid"
         >
-          Continua
+          Continuă
         </button>
       </form>
     </app-auth-card>
