First Register Store Version & slight header changes

--- a/src/app/shared/components/header/header.component.scss
+++ b/src/app/shared/components/header/header.component.scss
@@ -4,6 +4,7 @@
   justify-content: space-between;
   align-items: center;
   margin: 25px auto;
+  width: 100vw;
 }
 
 .logo {
@@ -28,7 +29,5 @@
 
 .nav-page {
   margin: auto 1.5em;
+  cursor: pointer;
 }
-
-
-
